# mcp-config-generator

./: README.md  index.html  pyproject.toml  server.py  smithery.yaml
